# odin-data-example

./: README.md  odin-data-workshop.md
cpp/: CMakeLists.txt
cpp/cmake/: FindOdinData.cmake
cpp/common/: CMakeLists.txt
cpp/common/include/: ExampleDetectorDefinitions.h
cpp/config/: CMakeLists.txt  example-detector-fp.json  example-detector-fr.json  example-detector.cfg  frameProcessor.sh  frameReceiver.sh
cpp/frameProcessor/include/: ExampleDetectorPlugin.h
cpp/frameProcessor/src/: CMakeLists.txt  ExampleDetectorPlugin.cpp  ExampleDetectorPluginLib.cpp
cpp/frameReceiver/include/: ExampleDetectorDecoder.h
cpp/frameReceiver/src/: CMakeLists.txt  ExampleDetectorDecoder.cpp  ExampleDetectorDecoderLib.cpp
cpp/static/: CMakeLists.txt  index.html
cpp/static/js/: odin-data.js
python/: pyproject.toml
python/src/example_detector/: _version.py  example_detector_adapter.py  example_detector_controller.py  image.data
